index.html. Trying to prevent tabs's jumping -- N-2

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -33,13 +33,13 @@
 
 html,
 body {
-  height: 100%;
+  //height: 100%;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  //height: 100%;
 }
 .toPushFooter {
   flex: 1 0 auto;
